02-circuit-breakers/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: circuit-breakers-app
  namespace: default
  labels:
    app: circuit-breakers-app
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: circuit-breakers-app
